--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,14 +2,14 @@
 {% block content %}
     <br>
     <br>
-    <form class="col-xs-6 col-xs-offset-3" action="login" method="POST">
+    <form class="col-xs-6 col-xs-offset-3" action="/signin" method="POST">
         <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" required>
+            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" name="email" required>
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" required>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password" required>
         </div>
         <button type="submit" class="btn btn-default col-xs-4 col-xs-offset-4">Login</button>
     </form>
