--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,11 +5,11 @@
     <h1 class="col-xs-6 col-xs-offset-3">Sign Up Form:</h1>
     <form class="col-xs-6 col-xs-offset-3" action="signup-form" method="POST">
         <div class="form-group">
-            <label for="exampleInputEmail1">Enter email address here</label>
+            <label>Enter email address here</label>
             <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" name="email" required>
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">Enter Password here</label>
+            <label>Enter Password here</label>
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password" required>
         </div>
         <button type="submit" class="btn btn-default col-xs-4 col-xs-offset-4">Sign Up</button>
