--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,16 +2,34 @@
 {% block content %}
     <br>
     <br>
-    <form class="col-xs-6 col-xs-offset-3" action="/signin" method="POST">
-        <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" name="email" required>
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password" required>
-        </div>
-        <button type="submit" class="btn btn-default col-xs-4 col-xs-offset-4">Login</button>
-    </form>
+    <div class="col-xs-6">
+        <h6 class="col-xs-12">Please sign in</h1>
+        <form action="/signin" method="POST">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password" required>
+            </div>
+            <button type="submit" class="btn btn-default col-xs-4 col-xs-offset-4">Login</button>
+        </form>
+    </div>
+
+    <div class="col-xs-6">
+        <h6 class="col-xs-12">You don't have an account? Sign up  here</h1>
+        <form action="signup-form" method="POST">
+            <div class="form-group">
+                <label>Enter email address here</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label>Enter Password here</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password" required>
+            </div>
+            <button type="submit" class="btn btn-default col-xs-4 col-xs-offset-4">Sign Up</button>
+        </form>
+    </div>
 
 {% endblock %}
