changed logic to accept any country code

--- a/templates/phone_number.html
+++ b/templates/phone_number.html
@@ -5,7 +5,9 @@
     <form class="col-xs-4 col-xs-offset-4" action="/phone-number-processing" method="POST">
         <div class="form-group">
             <label >please enter your phone number</label>
-            <input type="text" class="form-control" id="phone" placeholder="xxx-xxx-xxxx" name="phonenumber" required>
+            <input type="text" class="form-control" id="phone" placeholder="e.g. 6503155608" name="phonenumber" required>
+            <label >please enter your country code</label>
+            <input type="text" class="form-control" id="countrycode" placeholder="e.g. 971 for UAE" name="countrycode" required>
         </div>
         <button type="submit" class="btn btn-default col-xs-4 col-xs-offset-4">Send Code</button>
     </form>
