--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,7 +13,7 @@
                 <label for="exampleInputPassword1">Password</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password" required>
             </div>
-            <button type="submit" class="btn btn-default col-xs-4 col-xs-offset-4">Login</button>
+            <button type="submit" class="btn btn-default col-xs-4 col-xs-offset-4">Sign In</button>
         </form>
     </div>
 
