responsive settings added

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,7 +2,7 @@
 {% block content %}
     <br>
     <br>
-    <div class="col-xs-6">
+    <div class="col-xs-12 col-md-6">
         <h6 class="col-xs-12">Please sign in</h1>
         <form action="/signin" method="POST">
             <div class="form-group">
@@ -17,7 +17,7 @@
         </form>
     </div>
 
-    <div class="col-xs-6">
+    <div class="col-xs-12 col-md-6">
         <h6 class="col-xs-12">You don't have an account? Sign up  here</h1>
         <form action="signup-form" method="POST">
             <div class="form-group">
